--- a/TODO
+++ b/TODO
@@ -6,6 +6,17 @@ Done
 TODO
 ====
 
+- Bugs:
+	- Selecting non-CC in "add" tab still checks the expiration date
+	- When manually adding a user and NOT in fake mode, AND if the payment
+		type is NOT credit card, the expiration date keeps getting reset to Sep, 2009
+	- Assume card expires at the end of the month.  Cards that expire this month 
+		should still be charged.
+		- Log date of expired card. (show in error message)
+
+- Add a subject field to messages
+	- Test updates
+
 - Remove variable_get() to email addresses
 	- Write reg_data::get_contact_email()
 
@@ -31,7 +42,8 @@ TODO
 
 - Messages system
 	- Add a "subject" field to reg_message
-	- Add a reg_message::get_subject($name) function
+	- Add a reg_message::get_subject($name) function?
+		- Maybe modify load_display() to return an array?
 
 - Looking at http://api.drupal.org/api/function/t/5, I need to go back
 	and change all t() calls that use %strings into !strings.
