Added "subject" and "type" fields to the reg_message table. Modified reg_message::load_display() and reg_email::email() to deal with a data structure instead of a message.  Updated admin interface.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@100 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/TODO
+++ b/TODO
@@ -3,12 +3,14 @@
 Done
 ====
 
-
 TODO
 ====
 
 - Add a subject field to messages
+- dump data first!!
 	- Test updates
+
+
 
 - Write a build script
 	- build.sh
