Added a shipping name field.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@119 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/TODO
+++ b/TODO
@@ -10,6 +10,7 @@ TODO
 		- Make sure shipping fields are included
 
 - Refactor and update the reg codebase
+	- Create factory for authorize.net objects
 	- Remove all references to statics
 	- Create a reg_factory class to instantiate objects
 
