--- a/TODO
+++ b/TODO
@@ -6,8 +6,20 @@ Done
 TODO
 ====
 
-	- authorize_net
-		- Make sure shipping fields are included
+- reg/
+	autocomplete="off" in the input tag for the credit card number
+
+- Logging
+	- Create message called cc-decline-cvv or similar
+
+	- Log the captcha question
+
+	- I should check how SSL pages are logged, since they are displayed as
+		http://, even though the page load really DOES happen through SSL
+	- For WATCHDOG_WARNING or WATCHDOG_ERROR, the wrapper should send that
+		status to the watchdog() function as well.
+
+- reg/verify/resend should redirect the user to reg/verify after sending the email
 
 - Refactor and update the reg codebase
 	- Create factory for authorize.net objects
