--- a/TODO
+++ b/TODO
@@ -3,19 +3,92 @@
 Done
 ====
 
-
 TODO
 ====
+
+- Refactor and update the reg codebase
+	- Create factory for authorize.net objects
+		- factory->getObject()
+	- Move reg_data references into reg as a first step, then change reg_data
+		to extend the reg class
+	- Create a reg_factory class to instantiate objects
+		- getObject()
+			- get_reg()
+				- reg_log
+				- reg_message
+				- reg_form
+			- get_admin()
+				- reg_log
+			- get_captcha()
+			- get_email()
+				- reg
+				- reg_form
+			- get_fake()
+			- get_form()
+				- reg
+				- reg_admin_member
+				- reg_log
+				- reg_fake
+			- get_log()
+				- reg
+			- get_member()
+				- reg_form
+				- reg_log
+			- get_menu()
+				- reg
+			- get_message()
+				- reg
+				- reg_log
+			- get_success()
+				- reg
+				- reg_log
+				- reg_message
+			- get_theme()
+			- get_verify()
+				- reg
+				- reg_message
+				- reg_form
+			- get_admin_adjust()
+				- reg_admin_cancel
+					- I should extend this class
+				- reg
+				- reg_log
+			- get_admin_cancel()
+				- reg
+				- reg_admin_member
+				- reg_form
+				- reg_log
+			- get_admin_level()
+				- reg_form
+				- reg_log
+				- reg
+			- get_admin_search()
+				- reg
+				- reg_form
+				- reg_admin_member
+			- get_admin_settings()
+				- reg
+				- reg_form
+				- reg_admin
+			- get_admin_settings_message()
+				- reg_form
+				- reg_message
+		- find . -type f -name \*.class.php -exec grep -i --with-filename reg_data:: {} \;
+		- combine reg_data into reg and do a global search and replace
+	- Remove all references to statics
 
 - reg/
 	autocomplete="off" in the input tag for the credit card number
 
-- reg/verify/resend should redirect the user to reg/verify after sending the email
+- modify code to get the name and last 4 of the card number to get that name
+	from the first digit
 
-- Refactor and update the reg codebase
-	- Create factory for authorize.net objects
-	- Remove all references to statics
-	- Create a reg_factory class to instantiate objects
+- Multi-year code
+	- At signup, display a year field for the admin
+	- For /reg, get year from from the level offering
+	- Modify badge number assignment code to take a year argument
+
+- reg/verify/resend should redirect the user to reg/verify after sending the email
 
 - Messages
 	- When editing, instead of "ID 'id'", say "name 'name'"
