--- a/TODO
+++ b/TODO
@@ -10,20 +10,19 @@ TODO
 - Refactor and update the reg codebase
 	- Create a reg_factory class to instantiate objects
 		- getObject()
-			- get_log()
-				- reg
-			- get_menu()
-				- reg
 			- get_message()
 				- reg
 				- reg_log
+				- Test: reg, reg_admin_settings_message, reg_success, reg_verify
 			- get_reg()
 				- reg_log
 				- reg_message
 				- reg_form
 				- reg_fake
+				- Test: reg, reg_admin_adjust, reg_admin_cancel, reg_admin_level, reg_admin_level, reg_admin_log, reg_admin_member, reg_admin_search, reg_admin_settings, reg_email, reg_fake, reg_form, reg_log, reg_member, reg_menus, reg_message, reg_success, reg_verify
 			- get_admin()
 				- reg_log
+				- Test: reg_admin_settings
 			- get_captcha()
 			- get_email()
 				- reg
@@ -33,48 +32,62 @@ TODO
 				- reg_admin_member
 				- reg_log
 				- reg_fake
+				- Test: reg, reg_admin_cancel, reg_admin_level, reg_admin_member, reg_admin_search, reg_admin_settings, reg_admin_settings_message, reg_email, reg_form, reg_member, reg_verify
 			- get_member()
 				- reg_form
 				- reg_log
+				= Test: reg_form
 			- get_success()
 				- reg
 				- reg_log
 				- reg_message
+				- Test: None
 			- get_verify()
 				- reg
 				- reg_message
 				- reg_form
+				- Test: reg_menus, reg_verify
 			- get_admin_adjust()
 				- reg_admin_cancel
 					- I should extend this class
 				- reg
 				- reg_log
+				- Test: reg_admin_adjust
 			- get_admin_cancel()
 				- reg
 				- reg_admin_member
 				- reg_form
 				- reg_log
+				- Test: reg_admin_adjust, reg_admin_cancel
 			- get_admin_level()
 				- reg_form
 				- reg_log
 				- reg
+				- Test: reg_admin_level, reg_menus
 			- get_admin_search()
 				- reg
 				- reg_form
 				- reg_admin_member
+				- Test: reg_admin_search, reg_menus
 			- get_admin_settings()
 				- reg
 				- reg_form
 				- reg_admin
+				- Test: reg_admin_settings, reg_admin_settings_message, reg_menus
 			- get_admin_settings_message()
 				- reg_form
 				- reg_message
+				- Test: reg_admin_settings_message, reg_menus
 		- find . -type f -name \*.class.php -exec grep -i --with-filename reg_data:: {} \;
 		- combine reg_data into reg and do a global search and replace
 	- Remove all references to statics
 
 - reg/
 	autocomplete="off" in the input tag for the credit card number
+
+- admin/reg/settings/mesages/1234/edit
+	- Prevent editing of non-existant message IDs
+	- Throw an error and log it
 
 - modify code to get the name and last 4 of the card number to get that name
 	from the first digit
