Converted the reg_verify class to a non-static.  Updated reg_factory class. Tweaked some other dependcy issues surrounding the email class and member class.  Removed some inner uses of the reg_factory class.
Fixed date-matching issue in the verify code.

Fixed random object construction issues on the success page.


git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@134 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/TODO
+++ b/TODO
@@ -11,7 +11,7 @@ TODO
 	- Create a reg_factory class to instantiate objects
 		- getObject()
 			- get_verify()
-				- reg
+			- reg
 				- reg_message
 				- reg_form
 				- Test: reg_menus, reg_verify
@@ -58,6 +58,7 @@ TODO
 		- For constants, create a "get_constant()" function
 	- Search for ::
 	- Remove all "new" in any place but the factory class and reg.module
+	- Put a single factory instance in the reg.module file
 
 - reg/
 	autocomplete="off" in the input tag for the credit card number
