--- a/TODO
+++ b/TODO
@@ -3,23 +3,12 @@
 Done
 ====
 
-
 TODO
 ====
 
 - Refactor and update the reg codebase
 	- Create a reg_factory class to instantiate objects
 		- getObject()
-			- get_verify()
-			- reg
-				- reg_message
-				- reg_form
-				- Test: reg_menus, reg_verify
-			- get_admin_settings()
-				- reg
-				- reg_form
-				- reg_admin
-				- Test: reg_admin_settings, reg_admin_settings_message, reg_menus
 			- get_admin_settings_message()
 				- reg_form
 				- reg_message
@@ -52,8 +41,9 @@ TODO
 				- reg_form
 				- reg_admin_member
 				- Test: reg_admin_search, reg_menus
+		- remove all inner uses of the reg_factory class
 		- find . -type f -name \*.class.php -exec grep -i --with-filename reg_data:: {} \;
-		- combine reg_data into reg and do a global search and replace
+			- combine reg_data into reg and do a global search and replace
 	- Remove all references to statics (excluding constants)
 		- For constants, create a "get_constant()" function
 	- Search for ::
