Turned reg_admin_level class into a non-static, added factory method.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@138 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/TODO
+++ b/TODO
@@ -9,32 +9,13 @@ TODO
 - Refactor and update the reg codebase
 	- Create a reg_factory class to instantiate objects
 		- getObject()
-			- get_admin_adjust()
-				- reg_admin_cancel
-					- I should extend this class
-				- reg
-				- reg_log
-				- Test: reg_admin_adjust
-			- get_admin_cancel()
-				- reg
-				- reg_admin_member
-				- reg_form
-				- reg_log
-				- Test: reg_admin_adjust, reg_admin_cancel
-			- get_admin_level()
-				- reg_form
-				- reg_log
-				- reg
-				- Test: reg_admin_level, reg_menus
 			- get_admin_search()
 				- reg
-				- reg_form
 				- reg_admin_member
 				- Test: reg_admin_search, reg_menus
 			- get_reg()
 				- reg_log
 				- reg_message
-				- reg_form
 				- reg_fake
 				- Test: reg, reg_admin_adjust, reg_admin_cancel, reg_admin_level, reg_admin_level, reg_admin_log, reg_admin_member, reg_admin_search, reg_admin_settings, reg_email, reg_fake, reg_form, reg_log, reg_member, reg_menus, reg_message, reg_success, reg_verify
 		- remove all inner uses of the reg_factory class
@@ -42,6 +23,7 @@ TODO
 			- combine reg_data into reg and do a global search and replace
 	- Remove all references to statics (excluding constants)
 		- For constants, create a "get_constant()" function
+			- Create a private $constants array in reg class
 	- Search for ::
 	- Remove all "new" in any place but the factory class and reg.module
 	- Put a single factory instance in the reg.module file
