--- a/TODO
+++ b/TODO
@@ -8,12 +8,10 @@ TODO
 
 - Refactor and update the reg codebase
 	- Create a reg_factory class to instantiate objects
-		- getObject()
-			- get_reg()
-				- reg_log
-				- reg_message
-				- reg_fake
-				- Test: reg, reg_admin_adjust, reg_admin_cancel, reg_admin_level, reg_admin_level, reg_admin_log, reg_admin_member, reg_admin_search, reg_admin_settings, reg_email, reg_fake, reg_form, reg_log, reg_member, reg_menus, reg_message, reg_success, reg_verify
+		- reg.module:
+			- make a single reference to the reg_factory class
+			- remove all ::s
+			- remove all "new " strings
 		- remove all inner uses of the reg_factory class
 		- find . -type f -name \*.class.php -exec grep -i --with-filename reg_data:: {} \;
 			- combine reg_data into reg and do a global search and replace
