Fixed the verification query.  We're now checking for an exact time_t value of the credit card expiration date.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@152 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/TODO
+++ b/TODO
@@ -7,6 +7,14 @@ Done
 TODO
 ====
 
+- On search page, "download these results" link
+
+- Stats page, with:
+	- Number of registrations for current year
+		- Break down by membership
+	- Amount of revenue for current year
+		- Break down by calendar year
+
 - reg/verify/resend should redirect the user to reg/verify after sending the email
 
 - reg/
