--- a/TODO
+++ b/TODO
@@ -7,7 +7,10 @@ TODO
 ====
 
 - Auditing
-	- Log member searches, downloads and membership accesses
+	- Viewing individual members
+
+- Member searches
+	- Add searching by email address
 
 - Timezones when editing levels.  Do we want to do anything there?  
 	- Maybe allow an hour?
