--- a/TODO
+++ b/TODO
@@ -6,6 +6,49 @@ Done
 TODO
 ====
 
+- Unit tests
+	testIsBadgeNumAvailable():
+		Create account first, then do conflicting number
+	testAddMember():
+		Create some transactions first
+			- Write unit test for transaction creation
+		Make sure values are updated ONLY when transaction ID is specified
+			- Write as testAddMemberTransID()?
+	Other things to test:
+		- /reg
+			- test errors
+			- test creation via the add_member() function
+			- test badge number assignment
+		- /admin/reg
+			- test creation
+		- /admin/reg/logs
+			- test loging page
+			- create random log entry
+			- check for that log entry
+		- authorize.net module 
+			- different statuses
+
+- Check ongoing issue with gmmktime()
+	- Do I need to force the is_dst flag to 0?
+	- Check issues with timezone, is it being honored on format_date()?
+		- http://api.drupal.org/api/function/format_date/5
+	- It may make more sense to store the expiration as DATE values, but then I won't 
+		get the full suite of Drupal functions.
+	- I should probably just convert to date, and add 86400 seconds to each old date
+		when converting
+		- Rename field to card_expire_legacy?
+	- SELECT id, reg_id, card_expire, FROM_UNIXTIME(card_expire) FROM
+		reg_trans WHERE DAY(from_unixtime(card_expire)) != 1;
+
+- I guess reg_admin_log_view isn't needed since we deprecated those other
+	log viewing functions.
+	- Let's go back and move that code back into reg_admin_log, and update
+		child classes and the factory accordingly.
+
+- In confirmation email, include the membership type that was purchased.
+
+- Filter out "Audit log" from viewing individual registrations.
+
 - Timezones when editing levels.  Do we want to do anything there?  
 	- Maybe allow an hour?
 
@@ -48,6 +91,19 @@ TODO
 	- Omaga List module?
 	- Staff reg module
 	- Onsite reg module?
+		- Here's some ActiveXCode to print things up from MSIE:
+			var app = new ActiveXObject("word.application");
+
+			// This could/should be replaced with a web-based path?
+			var file = "file:///C:/wamp/www/template.doc";
+
+			app.Visible = false;
+			app.Documents.Open(file);
+
+			app.ActiveDocument.PrintOut();
+			app.ActiveDocument.close(false);
+
+			app.quit();
 
 - Admin
 	- Resend confirmation email
