Changed (year, badge_num) index to be unique.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@206 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/TODO
+++ b/TODO
@@ -65,6 +65,7 @@ TODO
 			- Write a unit test for this!
 	- At signup, display a year field for the admin
 		- Default to the current year
+	- Add year to member search page
 	- For /reg, get year from from the level offering
 	- Modify badge number assignment code to take a year argument
 
