Added DulicateDisplay class and added form hooks to reg.module and added menu item for Duplicate Membership Search.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@217 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/TODO
+++ b/TODO
@@ -6,19 +6,6 @@ Done
 TODO
 ====
 
-- Duplicate registration report:
-	- RegUtilDuplicateDisplay
-		- Borrow from the UnusedBadgeNumsDisplay class
-		- Single button to run all reports?
-		- Auditing
-	- Print rows of suspected badges with:
-		- Badge number
-		- Badge name
-		- Real name
-		- Membership type
-		- Membership status
-		- Matching criteria
-
 - Omega list
 	- Fields: id, first, last, action (text field - action to take)
 	- Omega class
@@ -29,6 +16,7 @@ TODO
 		- export()
 	- OmegaDisplay class
 		- Form functions go here
+		- Make collapsible form on top of search results, similar to member searching
 	- Tool to scan existing list of members?  Is that feasable?
 	- Menu URLs:
 		- reg/admin/util/omega_list
@@ -146,4 +134,7 @@ Long Term
 - Export data as a spreadsheet
 	- Main membership data
 	- Staff data separately?
+
+- Do distance calculations
+	- http://jan.ucc.nau.edu/~cvm/latlon_formula.html
 
